contact form--service changed and redone messeng select--minor layout fixes--head navbar reduced gap on smaller s

--- a/src/styles/head/header-utilities/NavBar.scss
+++ b/src/styles/head/header-utilities/NavBar.scss
@@ -10,6 +10,9 @@
 
         list-style-type: none;
 
+        @media screen and (max-width: 1150px) {
+            column-gap: 2.4rem;
+        }
         @media screen and (max-width: 991px) {
             column-gap: 0;
         }
